2009-05-26  Marek Habersack  <mhabersack@novell.com>

	* System.Design.dll.sources: added
	System.Web.UI.Design.WebControls/ListControlDesigner.cs

2008-07-24  Zoltan Varga  <vargaz@gmail.com>

	* System.Design_test.dll.sources: Fix CRLFs.

2008-07-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* System.Design.dll.sources: Added StringValueConverter.cs.
	* System.Design_test.dll.sources: Added StringValueConverterTest.cs.

2007-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: in 2.0 there is cyclic dep with Sys.Drawing.Design.dll.

2007-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more .NET 2.0 types.
	* System.Design_test.dll.sources :
	  added Test/Sys.Win.Forms.Design/MenuCommandsTest.cs

2007-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more .NET 2.0 types.

2007-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more .NET 2.0 types.

2007-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more .NET 2.0 types.

2007-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more .NET 2.0 types.

2007-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : added -r:System.Xml.dll
	* System.Design.dll.sources : added couple more of new .NET 2.0 types.

2007-10-01  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more new types:
	  ContentDefinition.cs, ContentDesignerState.cs,
	  ControlLocation.cs, DesignTimeResourceProviderFactory.cs,
	  IControlDesignerTag.cs, IControlDesignerView.cs,
	  IDesignTimeResourceWriter.cs, ViewEvent.cs, ViewEventArgs.cs,
	  ViewEventHandler.cs and WebFormsReferenceManager.cs and
	  WebFormsRootDesigner.cs in Sys.Web.UI.Design.
	  DataSourceGroupCollection.cs, DataSourceProviderService.cs,
	  DataSourceGroup.cs and DesignerDataColumn.cs in Sys.CM.Design.Data.

2007-09-28  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources : more new types: