@@ -1,3 +1,7 @@
+2009-07-30  Raja R Harinath  <harinath@hurrynot.org>
+
+	* Makefile ($(build_lib)): Move cyclic dependencies onto this.
+
 2009-05-26  Marek Habersack  <mhabersack@novell.com>
 
 	* System.Design.dll.sources: added
